--- a/pom.xml
+++ b/pom.xml
@@ -11,21 +11,25 @@
 
     <!--  1. 依赖  -->
     <dependencies>
+        <!--Junit-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <!--数据库驱动-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.47</version>
         </dependency>
+        <!-- 数据库连接池 -->
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
             <version>0.9.5.2</version>
         </dependency>
+
         <!--Servlet - JSP -->
         <dependency>
             <groupId>javax.servlet</groupId>
